<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="enter_shopping_item">Enter Shopping Item</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="delete_list">Delete all items</string>
    <string name="uncheck_list">Uncheck all items</string>
    <string name="uncheck">Uncheck</string>
    <string name="go_back">Go Back</string>
    <string name="delete_checked_items">Delete checked items</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete item</string>
    <string name="switch_light_dark_mode">Switch to light or dark mode</string>
    <string name="switch_mode">Switch</string>
</resources>