<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShoppingListActivity">

    <EditText
        android:id="@+id/shoppingItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_shopping_item"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="25dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="10dp"
        android:onClick="addClicked"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="10dp"
        android:onClick="settingsClicked"
        android:padding="10dp"
        android:text="@string/settings"
        android:textSize="18sp" />

</androidx.appcompat.widget.LinearLayoutCompat>